# MedLlama

./: README.md
medllama/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh  ui.py
medllama/.streamlit/: config.toml
medllama/medllama/: ui.py
