[tool.poetry]
name = "medllama"
version = "0.1.0"
description = "A webinterface to answer medical questions using a fine-tuned version of Llama 3 by META"
authors = ["Sebastian Strauß <sstrauss@uni-muenster.de>"]
readme = "README.md"

packages = [
    {include = "medllama"}
]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.35.0"
transformers = "^4.11.3"
torch = "^2.2.1"
Pillow = "^9.4.0"
accelerate= "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
